--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     {% block content %}{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="{% static '/js/tailwind.js' %}"></script>
 </body>
 </html>
