--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -2,13 +2,14 @@
 {% load static %}
 {% block title %}System Users{% endblock %}
 {% block content %}
+{% csrf_token %}
 <div class="relative w-full h-screen flex flex-col items-center p-5">
-
+    <input type="hidden" name="csrfmiddlewaretoken" value="your-csrf-token-value">
     <div id="user-modal" tabindex="-1" aria-hidden="true"
         class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.5)]">
         <div class="relative p-4 w-1/2 max-h-full">
             <div class="relative bg-white w-full rounded-lg shadow">
-                <span class="absolute -top-10 right-0 {{color}} px-3 py-1">{{message}}</span>
+                <span class="absolute -top-10 right-0 px-3 py-1" id="message-span"></span>
                 <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
                     <h3 class="text-lg font-semibold text-gray-900">
                         New User Form
@@ -76,7 +77,7 @@
                                 Password</label>
                             <input type="password" name="password" id="password"
                                 class="border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 focus:outline-none"
-                                placeholder="" required>
+                                placeholder="">
                         </div>
                     </div>
                     <div class="grid justify-end">
@@ -109,7 +110,7 @@
             </thead>
             <tbody id="table-body">
                 {% for user in users %}
-                <tr class="bg-white border-b hover:bg-gray-50 hover:cursor-pointer">
+                <tr class="bg-white border-b hover:bg-gray-50 hover:cursor-pointer group" data-user-id="{{ user.id }}" onclick="editUser('{{ user.id }}')">
                     <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
                         {{user.lastName}}  {{user.firstName}}</th>
                     <td class="px-6 py-4">{{user.idNo}}</td>
@@ -121,7 +122,14 @@
                     {% else %}
                         <td class="px-6 py-4">System Operator</td>
                     {% endif %}
-                    <td class="px-6 py-4">{{user.gender}}</td>
+                    <td class="px-6 py-4 flex relative">
+                        {{user.gender}}
+                        <span class="cancel-icon hidden group-hover:inline-block absolute right-1">
+                            <svg onclick="deleteUser('{{ user.id }}')" class="w-4 h-4 text-red-500 hover:text-red-700 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </span>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
