feat(auth) implementation of protected routes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -61,7 +61,8 @@
         </div>
     </div>
 
-    <div class="w-1/6 p-5 grid items-end">
+    <div class="w-1/6 p-5 grid items-end relative">
+        <a href="/logout" class="absolute top-5 right-5">logout</a>
         <div class="grid gap-3">
             <button type="button" id="manual-assign"
                 class="py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none border border-gray-500">
