--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,7 @@
                     </button>
                 </div>
                 <form class="p-4 md:p-5" method="POST" action="/parking">
+                    {% csrf_token %}
                     <div class="grid gap-4 mb-4 grid-cols-2">
                         <div class="col-span-2 sm:col-span-1">
                             <label for="vehicle" class="block mb-2 text-sm font-medium text-gray-900">Number
