--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -16,7 +16,7 @@
         </div>
         <div class="flex flex-row items-center py-8 pt-24 pb-16 sm:pt-8 mx-auto md:h-screen lg:py-0 w-full">
             <div class="w-3/4 h-full hidden lg:block relative">
-                <img src="/static/imgs/002.jpg" class="object-cover w-full h-full" />
+                <img src="{% static '/images/cover.jpg' %}" class="object-cover w-full h-full" />
                 <div class="absolute inset-0 bg-[rgba(0,0,0,0.5)]"></div>
             </div>
             <div class="w-11/12 sm:w-3/4 lg:w-1/2 rounded-lg md:mt-0 sm:max-w-md xl:p-0 mx-auto">
