feat(updates) Updated the UI components

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -1,14 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>{% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     {% block content %}{% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="{% static '/js/modules/axios.min.js' %}"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <script src="{% static '/js/tailwind.js' %}"></script>
 </body>
+
 </html>
