--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -9,10 +9,11 @@
         <div class="relative p-4 w-1/2 max-h-full">
             <div class="relative bg-white w-full rounded-lg shadow">
                 <span class="absolute -top-10 right-0 px-3 py-1" id="message-span"></span>
-                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
-                    <h3 class="text-lg font-semibold text-gray-900">
+                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t relative">
+                    <h3 class="text-lg font-semibold text-gray-900" id="formLabel">
                         New User Form
                     </h3>
+                    <!-- <button class="absolute right-20" onclick="deleteUser('{{ user.id }}')">del</button> -->
                     <button type="button" id="close-modal"
                         class="text-gray-500 bg-transparent rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center">
                         <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -23,8 +24,8 @@
                         <span class="sr-only">Close modal</span>
                     </button>
                 </div>
-                <form class="p-4 md:p-5" >
-                    {% csrf_token %}
+                <form class="p-4 md:p-5" onsubmit="handleSubmit(event)">
+                    <input type="text" class="hidden" name="id" id="id">
                     <div class="grid gap-4 mb-4 grid-cols-2">
                         <div class="col-span-2 sm:col-span-1">
                             <label for="firstName" class="block mb-2 text-sm font-medium text-gray-900">First
@@ -91,6 +92,8 @@
         </div>
     </div>
 
+    {% include 'includes/menu.html' %}
+    
     <h1 class="uppercase font-bold text-2xl">Active system Users</h1>
     <button id="new-user"
         class="absolute right-5 py-1 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none border border-gray-500">New
@@ -126,7 +129,7 @@
                     <td class="px-6 py-4 flex relative">
                         {{user.gender}}
                         <span class="cancel-icon hidden group-hover:inline-block absolute right-1">
-                            <svg onclick="deleteUser('{{ user.id }}')"
+                            <svg onclick="deleteUser('{{ user.id }}', event)"
                                 class="w-4 h-4 text-red-500 hover:text-red-700 cursor-pointer" fill="none"
                                 stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -141,13 +144,65 @@
     </div>
 
     <div class="mt-4 flex justify-center space-x-2 absolute bottom-2">
-        <button id="prev-btn"
+        <span id="total-pages" hidden>{{ total_pages }}</span>
+        <button id="prev-btn" onclick="fetchUsers(currentPage - 1)"
             class="px-3 py-2 text-sm font-medium text-gray-900 bg-gray-200 rounded hover:bg-gray-300">Previous</button>
         <span id="page-info" class="px-3 py-2 text-sm font-medium text-gray-700">Page 1</span>
-        <button id="next-btn"
+        <button id="next-btn" onclick="fetchUsers(currentPage + 1)"
             class="px-3 py-2 text-sm font-medium text-gray-900 bg-gray-200 rounded hover:bg-gray-300">Next</button>
     </div>
 </div>
 
 <script src="{% static '/js/users.js' %}"></script>
+<script>
+    const handleSubmit = async(event) => {
+        event.preventDefault();
+        const token = localStorage.getItem("smartPToken");
+        const id = document.getElementById('id').value;
+        const password = document.getElementById('password').value;
+        const formData = {
+            firstName: document.getElementById('firstName').value,
+            lastName: document.getElementById('lastName').value,
+            username: document.getElementById('username').value,
+            idNo: document.getElementById('idNo').value,
+            phone: document.getElementById('phone').value,
+            email: document.getElementById('email').value,
+            gender: document.getElementById('gender').value,
+        };
+        if (password != ""){
+            formData["password"] = password
+        }
+        const res = id != "" ? 
+            await axios.put(`/user/${id}`, formData,{
+                headers:{
+                    Authorization: `Bearer ${token}`,
+                }
+            }) : await axios.post('/users', formData,{
+                headers:{
+                    Authorization: `Bearer ${token}`,
+                }
+            }) 
+        alert(res.data.message)
+        if (res.data.success){
+            location.reload(true);
+        }
+    }
+    
+    const editUser = async (userId) => {
+        const res = await axios.get(`/user/${userId}`)
+        const userDetails = res.data.data
+        document.getElementById("formLabel").innerText = "Update User"
+        modal.classList.toggle('hidden');
+        modal.classList.toggle('flex');
+        document.getElementById('id').value = userDetails.id
+        document.getElementById('firstName').value = userDetails.firstName
+        document.getElementById('lastName').value = userDetails.lastName
+        document.getElementById('username').value = userDetails.username
+        document.getElementById('idNo').value = userDetails.idNo
+        document.getElementById('phone').value = userDetails.phone
+        document.getElementById('email').value = userDetails.email
+        let genderSelect = document.getElementById('gender');
+        genderSelect.value = userDetails.gender;
+    }
+</script>
 {% endblock %}
